Use java 11